# ant_colony_model

./: .gitignore  CITATION.cff  README.md  TODO-list.md  ant_colony.jl  batch_jobs.sh  experiment_parser.sh  experiments.jl  plot_creator.ipynb  plot_creator.jl  shell_scripts.txt
Metacentrum/: jobs_creator.sh  scripts.txt
Outputs/: best_exp1.txt  exp1.txt
Prepared_Output/: default_depth.txt  variant_0_depth.txt  variant_1_ants.txt  variant_1_depth.txt  variant_2_ants.txt  variant_2_depth.txt  variant_3_ants.txt  variant_3_depth.txt  variant_4_ants.txt  (+3 more)
source/: README.md  ant_colony.jl  experiment_parser.sh  experiments.jl  plot_creator.ipynb  plot_creator.jl  pyproject.toml
source/Metacentrum/: README.md  batch_jobs.sh  jobs_creator.sh
source/Metacentrum/Experiments/: default_ants.jl  default_depth.jl  variant_1_ants.jl  variant_2_ants.jl  variant_4_ants.jl  variant_5_depth.jl
source/Metacentrum/Jobs/: default_ants.sh  variant_1_depth.sh  variant_2_depth.sh  variant_3_ants.sh  variant_3_depth.sh  variant_5_ants.sh
source/Outputs/: README.md  best_grid_search_2.txt
source/Outputs/.ipynb_checkpoints/: best_exp2-checkpoint.txt  exp2-checkpoint.txt
source/Outputs/Ants_output/: variant_1_ants.txt  variant_1_depth.txt  variant_2_depth.txt  variant_3_depth.txt  variant_4_ants.txt  variant_4_depth.txt  variant_5_ants.txt
source/Outputs/Ants_output/.ipynb_checkpoints/: variant_0_ants-checkpoint.txt
source/Prepared_Output/: variant_0_ants.txt  variant_4_ants.txt  variant_5_depth.txt
source/Prepared_Output/.ipynb_checkpoints/: default_ants-checkpoint.txt
(+41 files in other folders)
